# ai-evaluation

./: .env.example  .gitignore  AI_EVALUATION_IMPLEMENTATION_PLAN.md  AI_EVALUATION_IMPROVEMENTS_DESIGN.md  CONTRIBUTING.md  CURSOR_EVALS_INSIGHTS.md  DETERMINISTIC_SCORERS_IMPLEMENTATION.md  DEVELOPMENT.md  DISABLE_TERMINAL_SOUNDS.md  DOCKER_VOLUMES.md  Dockerfile  HANDOVER.md  IMPLEMENTATION_SUMMARY.md  INSTALL_DOCKER.md  LICENSE  QUICK_FIX.md  QUICK_START_WITHOUT_DOCKER.md  README.md  README_GIT.md  SETUP_PYTHON.md  Taskfile.yml  alembic.ini  config.yml  coverage.xml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-llm.txt  requirements.txt  run_streaming_eval.py  setup_env.sh
.cursor/plans/: README.md  agents-runs-api.plan.md  cli-flow.md  comprehensive-implementation-plan.md  conversational-agent-architecture.plan.md  conversational-agent-implementation.plan.md  conversational-flow.md  eval-first-naming-and-model.plan.md  learnings-from-langfuse-braintrust.md  open-source-minimal-and-cleanup.plan.md  ownership-licensing-cleanup.plan.md  product-naming.plan.md  sdk-flow.md  tracing-and-cost-improvements.plan.md
.github/workflows/: cd.yml  ci.yml  eval.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_guardrails.py
config/: prometheus.yml
config/grafana/dashboards/: dashboard.yml
docs/: ADAPTER_REFACTORING_SUMMARY.md  PLAN_CONSOLIDATE_RUNS_PER_AGENT.md  api.md  architecture.md  cleanup-audit.md  competitive-analysis.md  concepts.md  custom-adapters.md  domain-abstraction.md  getting-started.md  guardrails.md  metrics-and-scorers.md  migrating-from-ml-infra-adapter.md  migration-guide.md  migration.md  ml-infra-onboarding.md  ml-infra-unit-testing-migration.md  policy-as-code.md  sdk-unit-testing.md  sdk.md  temporal-integration.md  tracing.md  ui.md
docs/deployment/: docker.md  kubernetes.md  monitoring.md  production.md  troubleshooting.md
docs/operations/: incident-response.md  runbook.md
examples/: api_example.py  autoevals_example.py  braintrust_openai_concepts.py  sdk_example.py  sse_streaming_example.py  temporal_example.py
examples/adapters/: README.md  example_custom_adapter.py
examples/deterministic/: README.md  config.yaml  dataset.jsonl
examples/devops/: README.md  kubernetes_eval.py  terraform_eval.py
examples/general/: simple_eval.py
examples/ml_infra/: config.yaml  config_dashboard.yaml  migration_example.py  sdk_entity_specific.py  sdk_multi_model.py  sdk_offline_eval.py
examples/ml_infra/unit_tests/: README.md  test_offline_unit.py  test_pytest_integration.py  test_single_case.py  test_small_suite.py  test_threshold.py
examples/policies/: README.md  customer-support.yaml
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
migrations/ml_infra_evals/: README.md  migration_script.py  validate_migration.py
samples_sdk/: README.md  __init__.py  requirements.txt
samples_sdk/consumers/: __init__.py
src/ai_evolution/: __init__.py  logging_config.py  logging_utils.py
src/aieval/: __init__.py  logging_config.py  logging_utils.py
tests/: __init__.py  conftest_devops.py  conftest_ml_infra.py
tests/api/: conftest.py  test_adapter_agent.py  test_agents_runs.py  test_dataset_agent.py  test_experiment_agent.py  test_experiments.py  test_health.py  test_scorer_agent.py  test_tasks.py
tests/fixtures/: datasets.py  mock_adapter.py  sample_dataset.jsonl
tests/integration/: test_eval_result_renaming.py  test_experiment.py
tests/unit/: test_adapters_http.py  test_adapters_ml_infra.py  test_adapters_sse_streaming.py  test_datasets.py  test_datasets_expanded.py  test_scorers.py  test_scorers_autoevals.py  test_scorers_deepdiff.py  test_scorers_deterministic.py  test_scorers_enriched.py  test_scorers_llm.py  test_scorers_metrics.py  test_sdk_assertions.py  test_sdk_comparison.py  test_sdk_devops.py  test_sdk_ml_infra.py  test_sdk_runner.py  test_sdk_tasks.py  test_sdk_unit_test.py  test_sinks.py  test_tracing.py  test_types.py
(+235 files in other folders)
