[project]
name = "ai-evolution"
version = "0.1.0"
description = "Unified AI Evaluation and Experimentation Platform - Evaluation, Observability, and Experimentation"
authors = [
    {name = "AI Evolution Contributors"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["ai", "evaluation", "evals", "experimentation", "llm", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10",
    "typer>=0.15",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "aiohttp>=3.9",
    "deepdiff>=6.0",
    "langfuse>=2.57",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "gradio>=4.0",
    "temporalio>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "ruff>=0.8",
    "mypy>=1.8",
]
llm = [
    "openai>=1.59",
    "anthropic>=0.18",
]

[project.scripts]
ai-evolution = "ai_evolution.cli.main:app"
ai-evolution-server = "ai_evolution.api.server:main"

[build-system]
requires = ["hatchling>=1.0", "setuptools>=65.0", "wheel"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_evolution"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
