[project]
name = "ai-evolution"
version = "0.1.0"
description = "Unified AI Evaluation and Experimentation Platform - Evaluation, Observability, and Experimentation"
authors = [
    {name = "AI Evolution Contributors"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["ai", "evaluation", "evals", "experimentation", "llm", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.1.0",
    "typer>=0.15",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "aiohttp>=3.9",
    "deepdiff>=6.0",
    "langfuse>=2.57",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "gradio>=4.0",
    "temporalio>=1.8",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    # Monitoring
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.42b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.21.0",
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    # Resilience
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "ruff>=0.8",
    "mypy>=1.8",
]
llm = [
    "openai>=1.59",
    "anthropic>=0.18",
]

[project.scripts]
aieval = "aieval.cli.main:app"
aieval-server = "aieval.api.server:main"

[build-system]
requires = ["hatchling>=1.0", "setuptools>=65.0", "wheel"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aieval"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["."]
